--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,7 @@ version: "3.2"
 
 services:
   oragono:
-    image: oragono/oragono:latest
+    image: oragono/oragono
     ports:
       - "6667:6667/tcp"
       - "6697:6697/tcp"
